--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -101,6 +101,23 @@ services:
       start_period: 5s
     restart: always
 
+  postgres2:
+    image: postgres:13
+    environment:
+      POSTGRES_USER: testuser
+      POSTGRES_PASSWORD: testpass
+      POSTGRES_DB: testdb
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres2-db-volume:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "testuser"]
+      interval: 10s
+      retries: 5
+      start_period: 5s
+    restart: always
+
   redis:
     image: redis:latest
     expose:
@@ -298,3 +315,4 @@ services:
 
 volumes:
   postgres-db-volume:
+  postgres2-db-volume:
