--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -111,12 +111,14 @@ services:
       - "5433:5432"
     volumes:
       - postgres2-db-volume:/var/lib/postgresql/data
+      - ./init/postgres2-init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "testuser"]
       interval: 10s
       retries: 5
       start_period: 5s
     restart: always
+
 
   redis:
     image: redis:latest
